# District-Award-Travel

./: .env.example  .gitignore  COST.md  DECISIONS.md  INFRA_AUDIT.md  README.md  RUNBOOK.md  SECURITY.md  flights.db  index.html  render.yaml  requirements.txt
agents/: engineer_jeff.md  engineer_jordan.md  engineer_marcus.md  engineer_martin.md  engineer_mitchell.md  engineer_priya.md  jensen.py  morning_brief.py  run_engineer.py
backend/: .gitignore  README.md  ai_client.py  main.py  requirements.txt
data/: action_items.json
district-award-travel/: HOW_TO_LAUNCH.md  README.md  orchestrator.py  setup.py
logs/: morning_brief_2026-05-19.html  morning_brief_2026-05-20.html  morning_brief_2026-05-21.html  morning_brief_2026-05-22.html  morning_brief_2026-05-23.html  morning_brief_2026-05-24.html  morning_brief_2026-05-25.html  morning_brief_2026-05-26.html  morning_brief_2026-05-27.html  morning_brief_2026-05-28.html  morning_brief_2026-05-29.html  morning_brief_2026-05-30.html  morning_brief_2026-05-31.html  morning_brief_2026-06-01.html  morning_brief_2026-06-02.html  morning_brief_2026-06-03.html  morning_brief_2026-06-04.html  morning_brief_2026-06-05.html  morning_brief_2026-06-06.html  (+1 more)
platform/infra/alert_escalation/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  setup.py
platform/infra/alert_escalation/alert_escalation/: api.py  config.py  engine.py  logging.py  main.py  models.py  storage.py  worker.py
platform/infra/alert_escalation/monitoring/: prometheus.yml
platform/infra/alert_escalation/scripts/: start.sh  stop.sh
(+584 files in other folders)
